# pytorch-deep-learning-code

./: main.py  pyproject.toml
00_pytorch_fundamentals/: 00-print-device.py  01-create-tensor.py  02-random-tensor.py  03-tensor-datatypes.py  04-tensor-operation.py  05-shape-error.py  06-tensor-aggregation.py  07-tensor-reshape-stack.py  08-tensor-index.py  main.py
01_pytorch_workflow/: 01-data-prepare.py  02-build-model.py  03-train-model.py  04-load-model.py  05-liner-layer.py
02_pytorch_classification/: 01-make-circles.py  02-build-model.py  03-build-v1-model.py  04-non-linearity.py  05-ReLU-by-hand.py  06-multi-class-classification.py  07_train_model.py  _06_train_data.py  data_setup.py
03_pytorch_computer_vision/: .gitignore  01-prepare-data.py  02-data-loader.py  03-build-model.py  04-build-v1-model.py  05-build-cnn-model.py  06-random-predictions.py  _01_prepare_data.py  _02_data_loader.py  _05_build_cnn_model.py  device.py  engine.py  helper_functions.py
04_pytorch_custom_datasets/: 01-prepare-data.py  02-display-random-image.py  02-transform-data.py  03-image-folder.py  04-custom-dataset.py  _03_image_folder.py  _04_custom_dataset.py  _05_display_random_image.py  _06_dataloader.py  _07_other_transform.py  _08_build_model_v0.py  _09_train_and_test.py  _10_train_model_v0.py  _11_data_augmentation.py  _12_make_predition.py  util.py  utils.py
05_pytorch_going_modular/: model_builder.py  train.py
06_pytorch_transfer_learning/: download_data.py  make_predict.py  train.py
07_pytorch_experiment_tracking/: train.py
08_pytorch_paper_replicating/: .gitignore  (+8 more)
