[project]
name = "pytorch-deep-learning-code"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "matplotlib>=3.10.9",
    "pandas>=2.3.3",
    "requests>=2.34.2",
    "scikit-learn>=1.7.2",
    "torch>=2.12.0",
    "torchinfo>=1.8.0",
    "torchvision>=0.27.0",
    "tqdm>=4.67.3",
]

[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true
